# SEC-RAG

./: .env.example  .gitignore  CHUNKING_EXPERIMENTS.md  Dockerfile  Makefile  PROMPT_EXPERIMENTS.md  README.md  debug_chunks.py  docker-compose.yml  init.sql  migrate_schema.sql  pyproject.toml
docs/: CHUNKING_EXPERIMENTS.md  PROMPT_EXPERIMENTS.md
prompts/: system_prompt.json
snapshots/: corpus.dump
src/: __init__.py  api.py  app.py  indexer.py  llm.py  retriever.py  streamlit_utils.py
src/backend/: adaptive_chunker.py  api.py  chunking_config.py  content_detector.py  db_config.py  evaluate_chunking.py  indexer.py  llm.py  query_parser.py  reranker.py  retriever.py
src/frontend/: Chat.py  streamlit_app.py  utils.py
src/frontend/pages/: 1_RAG_Debug.py
src/pages/: 2_RAG_Debug.py
tests/: test_adaptive_chunking.py  test_rag.py
